# applications-menu-indicator

./: README.md  meson.build
data/: com.github.ryankugel.applications-menu.appdata.xml  com.github.ryankugel.applications-menu.gschema.xml  icons.gresource.xml  meson.build
src/: ApplicationsMenu.vala  ApplicationsMenuIndicator.vala  Config.vala.in
src/Backend/: App.vala  AppCenter.vala  AppSystem.vala  Category.vala  DBusService.vala  SwitcherooControl.vala  SynapseSearch.vala
src/Views/: CategoryView.vala  GridView.vala  MenuView.vala  SearchView.vala
src/Widgets/: AppButton.vala  AppContextMenu.vala  AppListBox.vala  AppListRow.vala  PageChecker.vala  SearchItem.vala  Switcher.vala
src/synapse-core/Actions/: RunnerAction.vala
